# scitex-template

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: cla.yml  docs.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-dev-quality-audit-on-ubuntu-latest.yml  scitex-quality.yml  test.yml
.scitex/dev/: config.yaml
docs/sphinx/: api.rst  conf.py  index.rst
examples/: 01_basic.py
signatures/: cla.json
src/scitex_template/: README.md  __init__.py  __main__.py  _cache.py  cli.py  mcp_server.py  registry.py
src/scitex_template/_code/: _code_templates.py
src/scitex_template/_mcp/: __init__.py  handlers.py  tool_schemas.py
src/scitex_template/_project/: __init__.py  _app_templates.py  _clone_project.py  _clone_template.py  _customize.py  _directory_structure.py  _generate_configs.py  _generate_readme.py  _scholar_writer_integration.py  clone_app.py  clone_module.py  clone_pip_project.py  clone_research.py  clone_research_minimal.py  clone_scitex_minimal.py  clone_singularity.py  clone_writer_directory.py
src/scitex_template/_skills/: SKILL.md  code-templates.md  scholar-writer-integration.md
src/scitex_template/_sphinx_html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_template/_utils/: _copy.py  _customize.py  _git_strategy.py  _logging_helpers.py  _rename.py
templates/: REGISTRY.yaml
templates/cloud-module/: .gitignore  CHANGELOG.md  LICENSE  README.md  manifest.yaml  module.py  pyproject.toml  requirements.txt  template.yaml
templates/cloud-module/devserver/: manage.py  mock_project.py  settings.py  urls.py  validator.py  views.py
templates/cloud-module/tests/: test_module.py
templates/minimal/: .gitignore  README.md  template.yaml
templates/paper/: template.yaml
templates/pip-project/: .gitignore  Makefile  README.md  README_v01.md  pyproject.toml  template.yaml
templates/pip-project/config/: mcp_config.json
templates/pip-project/examples/: cli_workflows.ipynb  getting_started.ipynb
templates/pip-project/mgmt/: 00_PROJECT_DESCRIPTION_v01.org  (+2 more)
templates/research/: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  template.yaml
templates/singularity/: template.yaml
templates/singularity/docs/to_claude/examples/pip-project-template/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
templates/singularity/docs/to_claude/examples/pip-project-template/.github/workflows/: notification.yml  validation.yml
templates/singularity/docs/to_claude/examples/pip-project-template/config/: mcp_config.json
templates/singularity/docs/to_claude/examples/pip-project-template/examples/: cli_workflows.ipynb  getting_started.ipynb
templates/singularity/docs/to_claude/examples/pip-project-template/mgmt/: 00_PROJECT_DESCRIPTION.org  01_ARCHITECTURE.org  99_BULLETIN_BOARD.org
templates/singularity/docs/to_claude/examples/pip-project-template/mgmt/AGENTS/: ArchitectAgent.md  BulletinBoardOrganizerAgent.md  DebuggerAgent.md  GitHandlerAgent.md  SourceDeveloperAgent.md  TestDeveloperAgent.md  TestResultsReportAgent.md  TestRunnerAgent.md
templates/singularity/docs/to_claude/examples/pip-project-template/mgmt/USER_PHILOSOPHY/: 00_PROJECT_DESCRIPTION_EXAMPLE.org  01_DEVELOPMENT_CYCLE.org  02_NAMING_CONVENSIONS.org  03_ARCHITECTUAL_AGREEMENT_PROCESS.org  03_ARCHITECTURE_EXAMPLE.org  04_ARCHITECTURE_PREDEFINED.org  05_PRIORITY_CONFIG.org  06_MULTIPLE_SPECIAL_AGENTS.org  99_BULLETIN_BOARD_EXAMPLE.org
templates/singularity/docs/to_claude/examples/pip-project-template/src/pip_project_template/: __init__.py  __main__.py
templates/singularity/docs/to_claude/examples/pip-project-template/src/pip_project_template/cli/: _GlobalArgumentParser.py  __init__.py  calculate.py  info.py  serve01.py  serve02.py
templates/singularity/docs/to_claude/examples/pip-project-template/src/pip_project_template/core/: _Calculator.py  __init__.py
templates/singularity/docs/to_claude/examples/pip-project-template/src/pip_project_template/mcp_servers/: McpServer01.py  McpServer02.py
templates/singularity/docs/to_claude/examples/pip-project-template/src/pip_project_template/types/: _DataContainer.py  __init__.py
templates/singularity/docs/to_claude/examples/pip-project-template/src/pip_project_template/utils/: __init__.py  _add.py  _multiply.py
templates/singularity/docs/to_claude/examples/pip-project-template/tests/custom/: test_mcp_config.py  test_pip_install.py  test_src_test_agreement.py  test_status.py
templates/singularity/docs/to_claude/examples/pip-project-template/tests/github_actions/: README.md  SETUP.md  run_ci_container.sh  run_ci_local.sh
templates/singularity/docs/to_claude/examples/pip-project-template/tests/pip_project_template/cli/: test___init__.py  test_info.py  test_serve01.py
templates/singularity/docs/to_claude/examples/pip-project-template/tests/pip_project_template/core/: test__Calculator.py  test_core_init.py
templates/singularity/docs/to_claude/examples/pip-project-template/tests/pip_project_template/mcp_servers/: test_McpServer01.py
templates/singularity/docs/to_claude/examples/pip-project-template/tests/pip_project_template/types/: test__DataContainer.py  test_types_init.py
templates/singularity/docs/to_claude/examples/pip-project-template/tests/pip_project_template/utils/: test__add.py  test__multiply.py
templates/singularity/docs/to_claude/examples/pip-project-template/tests/reports/: ci_container_report.json  setup_symlinks.sh
tests/: TODO.md  conftest.py  run_test.sh  test_cache.py  test_cli.py  test_clone_template.py  test_registry.py
tests/_mcp/: test_template_handlers.py
tests/_project/: test__customize.py  test__directory_structure.py  test__generate_configs.py  test__generate_readme.py
tests/develop/: test_audit.py
tests/examples/: test_01_basic.py
tests/integration/: test_cross_package_imports.py
tests/scitex_template/: test_cli.py
(+323 files in other folders)
