[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-template"
version = "0.6.5"
description = "Project template cloner + code snippet library for the SciTeX ecosystem — six templates vendored, shallow-cloned on demand to ~/.scitex/template/cache/"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" },
]
keywords = [
    "scitex",
    "template",
    "boilerplate",
    "scaffolding",
    "research",
    "pip-project",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0",
    "gitpython",
    "pyyaml",
    "scitex-config>=0.3.0",
]

# scitex.git / scitex.scholar / scitex.writer are still imported by a few
# legacy cloners (clone_scitex_minimal, clone_module, clone_app, clone_project
# remote-fallback path). Install with `pip install scitex-template[legacy]`
# to enable those codepaths. The cache fast-path for the 6 vendored
# templates needs none of this.

[project.optional-dependencies]
legacy = [
    "scitex",
]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "mcp>=1.0.0",
    "pytest-asyncio>=0.21",
    "pytest-cov",
    "pytest>=7.0",
    "scitex",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-template[legacy]",
    "scitex-template[mcp]",
]

[project.scripts]
scitex-template = "scitex_template.cli:main"
scitex-template-mcp = "scitex_template.mcp_server:main"

[project.entry-points."scitex_dev.docs"]
scitex-template = "scitex_template"

[project.entry-points."scitex_dev.skills"]
scitex-template = "scitex_template"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-template"
Documentation = "https://scitex-template.readthedocs.io"
Repository = "https://github.com/ywatanabe1989/scitex-template"
Issues = "https://github.com/ywatanabe1989/scitex-template/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_template"]
# templates/ is intentionally NOT in the wheel — the cloner shallow-clones
# this repo into ~/.scitex/template/cache/ on first use to get the actual
# template content. Keeps the pypi wheel tiny (<100KB) while the git repo
# stays the single source of truth for template payload.

[tool.hatch.build.targets.sdist]
include = [
    "src/scitex_template",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
